# GameOfLife

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  tasks.json  vcpkg.json
QuadTreeTest/: QuadTreeTest.cpp
cmake/imgui/: CMakeLists.txt
include/: core.hpp  interface.hpp  modelgenerator.hpp  modelparameters.hpp  modelpresets.hpp
inlcude/: ModelParameters.hpp
src/: core.cpp  core.hpp  interface.cpp  main.cpp  modelpresets.cpp  sdl_manager.cpp  sdl_manager.hpp
src/gui/: WidgetFunctions.cpp  WidgetFunctions.hpp  gui.cpp  gui.hpp  interface.cpp  interface.hpp  mainwindow.cpp  mainwindow.hpp  sdl_colormaps_8bit.hpp
src/model/: ColorMapper.cpp  ColorMapper.hpp  CpuModel.cpp  CpuModel.h  CpuModel.hpp  LessNaiveModel.cpp  LessNaiveModel.hpp  LifeHashTree.cpp  LifeHashTree.hpp  LifeQuadTree.cpp  LifeQuadTree.hpp  LifeQuadTreeModel.cpp  LifeQuadTreeModel.hpp  NaiveModel.cpp  NaiveModel.hpp  PrefixSumModel.cpp  PrefixSumModel.hpp  VectorGrid.hpp  abstract_model.cpp  abstract_model.hpp  modelparameters.hpp
src/presets/: modelpresets.hpp
src/ui/: interface.cpp  interface.hpp  mainwindow.cpp  mainwindow.hpp  ui.cpp  ui.hpp
tests/: CMakeLists.txt  LifeHashTreeTest.cpp  main.cpp  vectorgridtest.cpp
